--- a/css/all.less
+++ b/css/all.less
@@ -1,11 +1,46 @@
 .control-btn{
-  width: 50px;
-  height: 50px;
-  
+  width: 0;
+  height: 0;
+  border-style: solid;
+  display: inline-block;
+}
+.control-panel{
+  width: 30%;
+  text-align: center;
+}
+.component{
+  display: table-cell;
+}
+.stream-content{
+  display: table;
+  width: 100%;
+  &:after{
+    content: "";
+    display: block;
+    clear: both;
+  }
+}
+#btn-up{
+  border-width: 0 15px 15px 15px;
+  border-color: transparent transparent #007bff transparent
+}
+#btn-down{
+  border-width: 15px 15px 15px 0;
+  border-color: transparent #007bff transparent transparent;
+}
+#btn-left{
+  border-width: 15px 0 15px 15px;
+  border-color: transparent transparent transparent #007bff;
+}
+#btn-right{
+  border-width: 15px 15px 0 15px;
+  border-color: #007bff transparent transparent transparent;
 }
 
 #video-stream{
+  width: 70%;
   padding-top: 500px;
+  background-color: #000;
   background-size:contain;
   background-position: center;
   background-repeat: no-repeat;
